# VoxelGameAndEngine

VoxelEngine/: CMakeLists.txt  README.md
VoxelEngine/src/: engine.cpp  engine.hpp
VoxelEngine/src/camera/: CMakeLists.txt  camera.cpp  camera.hpp
VoxelEngine/src/dt/: CMakeLists.txt  deltatime.cpp  deltatime.hpp
VoxelEngine/src/graphics/: CMakeLists.txt  mesh.cpp  mesh.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  textureatlas.cpp  textureatlas.hpp
VoxelEngine/src/loaders/: CMakeLists.txt  pngloader.cpp  pngloader.hpp
VoxelEngine/src/renderers/: CMakeLists.txt  linerenderer.cpp  linerenderer.hpp  voxelrenderer.cpp  voxelrenderer.hpp
VoxelEngine/src/statistic/: CMakeLists.txt  enginestatistic.cpp  enginestatistic.hpp
VoxelEngine/src/utils/: CMakeLists.txt
VoxelEngine/src/utils/pathManager/: pathmanager.cpp  pathmanager.hpp
VoxelEngine/src/voxel/: CMakeLists.txt  ivoxelchunkgenerator.hpp  voxel.cpp  voxel.hpp  voxelchunk.cpp  voxelchunk.hpp  voxelchunks.cpp  voxelchunks.hpp
VoxelEngine/src/window/: CMakeLists.txt  window.cpp  window.hpp  windowevents.cpp  windowevents.hpp
VoxelEngineGame/: CMakeLists.txt
VoxelEngineGame/resources/: main.glslv
VoxelEngineGame/resources/shaders/: line.glslf  line.glslv
VoxelEngineGame/src/: main.cpp
VoxelEngineGame/src/chunk-generators/ellipse/: chunkgeneratorellipse.cpp  chunkgeneratorellipse.hpp
VoxelEngineGame/src/chunk-generators/flat/: chunkgeneratorflat.cpp  chunkgeneratorflat.hpp
VoxelEngineGame/src/chunk-generators/standard/: chunkgeneratorstandard.cpp  chunkgeneratorstandard.hpp
VoxelEngineGame/src/engine/: gameengine.cpp  gameengine.hpp
